# plotly_code

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.interactiveplot  Dockerfile.kpi  GPO_GEN7_WUP_20250318_GEN7_R6.0.1_NA_085155_002.h5  HPCC_TOOL _TODO.txt  InputsInteractivePlot.json  KPIPlot.json  Project Architecture & Design Notes2.txt  README.md  ResimHTMLReport.py  ResimHTMLReport.spec  _check_kerberos.py  bash.exe.stackdump  build.sh  build_singularity.bat  detection_kpi_report_20250812_141222_292007700_CDC_MODE_0005.html  detection_matching_kpi_optimized.py  docker-build.bat  docker-compose.yml  dumm.py  dummmm.py  interactiveplot_cpp.7z  main.py  pyproject.toml  reproduce_issue_v2.py  requirements-dev.txt  requirements-prod.txt  requirements.txt  sh.exe.stackdump  sim.txt  slfjhas;asg.py  slurm_tmux_launcher.sh  vlm.py
cpp_poc/: CMakeLists.txt  README.md  plot_script.py  requirements.txt
cpp_poc/src/: hdf5_parser.cpp  hdf5_parser.hpp  main.cpp  python_plotter.cpp  python_plotter.hpp
kpi/wast/Project1/New folder/F360Core_ReleasePackage_10p02p00_3f2a4363762/Example_Tracker_Wrapper/: CMakeLists.txt  wrapper_lib_test.cpp
kpi/wast/Project1/New folder/F360Core_ReleasePackage_10p02p00_3f2a4363762/Example_Tracker_Wrapper/example_wrapper_lib/: CMakeLists.txt
kpi/wast/Project1/New folder/F360TrackerLib/: BUILD  CMakeCache.txt  CMakeLists.txt  coverage_config.cmake  f360-docs.cmake  ocg_config.cmake  rspp_config.cmake  ut_config.cmake
kpi/wast/Project1/New folder/F360TrackerLib/Fusion360/: f360_calibrations.cpp  f360_xtrk_logging.cpp  rspp_calibrations.cpp
kpi/wast/Project1/New folder/F360TrackerLib/Fusion360/cluster_grouping/: sources.cmake
kpi/wast/Project1/New folder/F360TrackerLib/Fusion360/clustering/: sources.cmake
kpi/wast/Project1/New folder/F360TrackerLib/Fusion360/e2e_protection/: sources.cmake
kpi/wast/Project1/New folder/F360TrackerLib/Fusion360/include/: f360_accel.h  f360_angle.h  f360_any_other_assoc_det_close.h  f360_bounding_box.h  f360_calculate_priority.h  f360_circular_buffer.h  f360_cluster_motion_status.h  f360_concrete_wall_measurements.h  f360_concrete_wall_sensor.h  f360_concrete_wall_side.h  f360_current_msmt_type.h  f360_dead_zone_status.h  f360_det_cross_covariances.h  f360_detection_2_cluster_type.h  f360_detection_hist.h  f360_dimensions.h  f360_functional.h  f360_internal_reflection_buffer_slot.h  f360_iterator.h  f360_iterator_detail.h  f360_local_clusters.h  f360_longi_stat_curve.h  f360_matrix_dimension.h  f360_norm_heading_angle.h  f360_object_class.h  f360_object_class_probability_type.h  f360_object_occlusion_status.h  f360_object_sides.h  f360_object_status.h  f360_object_track.h  f360_pseudo_msmt.h  f360_reference_point.h  f360_rotate_state_covariance_matrix.h  f360_static_env_helpers.h  f360_static_env_poly_types.h  f360_static_environment_class.h  f360_track_init.h  f360_tracker_info.h  rspp_calibrations.h  sources.cmake
kpi/wast/Project1/New folder/F360TrackerLib/Fusion360/logging/: sources.cmake
kpi/wast/Project1/New folder/F360TrackerLib/Fusion360/measurement_update_tracks/: sources.cmake
kpi/wast/Project1/New folder/F360TrackerLib/Fusion360/multipath_detector/: sources.cmake
kpi/wast/Project1/New folder/F360TrackerLib/Fusion360/pre_association_track_management/: sources.cmake
kpi/wast/Project1/New folder/F360TrackerLib/Fusion360/sensor_postprocessing/: sources.cmake
kpi/wast/Project1/New folder/F360TrackerLib/Fusion360/static_environment/: sources.cmake
kpi/wast/Project1/New folder/F360TrackerLib/Fusion360/track_classification/: sources.cmake
kpi/wast/Project1/New folder/F360TrackerLib/Fusion360/track_downselection/: sources.cmake
kpi/wast/Project1/New folder/F360TrackerLib/Fusion360/trailer_detector/: sources.cmake
kpi/wast/Project1/New folder/F360TrackerLib/Fusion360/unittest_stubs/: f360_data_generator.cpp  f360_set_variant.cpp
kpi/wast/Project1/New folder/F360TrackerLib/SharedTrackerAPI/Logging/: SyncInfoLog.h  TrailerDetectorLog.h  f360_rot_object_log.h
kpi/wast/Project1/New folder/F360TrackerLib/SharedTrackerAPI/Types/: BUILD
kpi/wast/Project1/New folder/F360TrackerLib/SharedTrackerAPI/core/: f360_constants.h  f360_safety_control_logic.h
kpi/wast/Project1/New folder/F360TrackerLib/StateManager/source/: f360_output_diagnostics.cpp  f360_safety_control_logic.cpp
kpi/wast/Project1/New folder/F360TrackerLib/Timing/: f360_get_wall_time.cpp
plotly_iteration/plotly_7/CMake/: CMakeLists.txt
plotly_iteration/plotly_7/radar_udp_dump/Cmake/: CMakeLists.txt
sadfdsaffdsasf/interactiveplot_cpp/: CMakeLists.txt
sadfdsaffdsasf/interactiveplot_cpp/InteractivePlot/a_config_layer/: allsensor_json_parser.cpp  json_parser_factory.h
sadfdsaffdsasf/interactiveplot_cpp/InteractivePlot/b_persistence_layer/: hdf_parser.cpp
sadfdsaffdsasf/interactiveplot_cpp/InteractivePlot/c_data_storage/: data_model_storage.cpp
sadfdsaffdsasf/interactiveplot_cpp/InteractivePlot/d_business_layer/: data_prep.cpp
sadfdsaffdsasf/interactiveplot_cpp/KPI/a_persistence_layer/: hdf_wrapper.cpp
sadfdsaffdsasf/interactiveplot_cpp/KPI/b_data_storage/: kpi_data_model_storage.cpp
sadfdsaffdsasf/interactiveplot_cpp/KPI/c_business_layer/: detection_matching_kpi.h  kpi_factory.cpp
simg_zmq/jira/: .env.example  README.md  pyproject.toml
simg_zmq/jira/src/jira_hzp/: __init__.py  cli.py  client.py  config.py
wsa_plotly/plotly_66/interactiveplot_cpp/KPI/: CMakeLists.txt
wsa_plotly/plotly_66/interactiveplot_cpp/KPI/a_persistence_layer/: kpi_hdf_parser.cpp
wsa_plotly/plotly_66/interactiveplot_cpp/KPI/b_data_storage/: kpi_config_storage.h  kpi_data_model_storage.h
wsa_plotly/plotly_66/interactiveplot_cpp/KPI/d_presentation_layer/: kpi_html_gen.h
wsa_plotly/plotly_code/plotly_67/interactiveplot_cpp/InteractivePlot/: CMakeLists.txt
wsa_plotly/plotly_code/plotly_67/interactiveplot_cpp/InteractivePlot/c_data_storage/: config_storage.cpp
wsa_plotly/plotly_code/plotly_67/interactiveplot_cpp/InteractivePlot/d_business_layer/: utils.cpp
(+5650 files in other folders)
