[project]
name = "ResimHTMLReport"
version = "1.0"
description = "Interactive HTML Report Generator"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { include = [
    "InteractivePlot",
    "InteractivePlot.*",
    "KPI",
    "KPI.*"
] } }

[tool.cxfreeze]
executables = [
    { script = "ResimHTMLReport.py", base = "console" }
]

[tool.cxfreeze.build_exe]
includes = [
    "lxml", "h5py", "plotly",
    "InteractivePlot.d_business_layer.data_cal",
    "InteractivePlot.d_business_layer",
    "pandas", "numpy", "pytz", "six"
]
include_files = [
    ["InteractivePlot/a_config_layer", "InteractivePlot/a_config_layer"],
    ["InteractivePlot/b_persistence_layer", "InteractivePlot/b_persistence_layer"],
    ["InteractivePlot/c_data_storage", "InteractivePlot/c_data_storage"],
    ["InteractivePlot/d_business_layer", "InteractivePlot/d_business_layer"],
    ["InteractivePlot/e_presentation_layer", "InteractivePlot/e_presentation_layer"],
    ["KPI/a_business_layer", "KPI/a_business_layer"],
    ["KPI/b_presentation_layer", "KPI/b_presentation_layer"]
]
